<resources>
    <string name="app_name">SYL</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoibmd1eWVuMTk5OSIsImEiOiJjbGR1aWdjbGIwMTZxM3FwY25lNG9lbXE2In0.9mHcLoxOQWUho2CNmClrYA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password?</string>
    <string name="other_login">Other Login</string>
    <string name="location">Location</string>
    <string name="location_background">LOCATION_BACKGROUND</string>
    <string name="history_record">History record</string>
    <string name="your_image_display">Your image display</string>
    <string name="start">Start</string>
    <string name="activity_text">Họạt động</string>

</resources>