<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/_24dp"
    android:paddingBottom="@dimen/_24dp"
    android:scrollbars="none"
    tools:context=".ui.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgHeader"
            style="@style/TextView.Header"
            android:layout_width="259dp"
            android:layout_height="184dp"
            android:src="@mipmap/image_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="h,300:250"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextView.Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgHeader" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutUsername"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60dp"
            android:layout_marginTop="@dimen/_24dp"
            android:background="@drawable/edittext_outline"
            android:paddingHorizontal="@dimen/_12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle">

            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/username"
                android:textColorHint="@color/C0C0C0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60dp"
            android:layout_marginTop="@dimen/_28dp"
            android:background="@drawable/edittext_outline"
            android:paddingHorizontal="@dimen/_12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutUsername">

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/_6dp"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/C0C0C0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/imgHide"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgHide"
                android:layout_width="@dimen/_20dp"
                android:layout_height="@dimen/_20dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/lock_eye"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/layoutPassword"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvError"
            style="@style/TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:layout_marginTop="@dimen/_8dp"
            android:maxLines="1"
            android:textColor="@color/red"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/layoutPassword"
            app:layout_constraintStart_toStartOf="@id/layoutPassword"
            app:layout_constraintTop_toBottomOf="@id/layoutPassword"
            tools:text="have a error"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tvForgetPW"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24dp"
            android:text="@string/forget_password"
            android:textColor="@color/blue"
            android:textSize="@dimen/_14sp"
            app:layout_constraintEnd_toEndOf="@id/layoutPassword"
            app:layout_constraintTop_toBottomOf="@id/layoutPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_65dp"
            android:layout_marginTop="@dimen/_36dp"
            android:text="Login"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvForgetPW" />

        <View
            android:id="@+id/line_1"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_marginTop="@dimen/_36dp"
            android:layout_marginEnd="@dimen/_12dp"
            android:background="@color/C0C0C0"
            app:layout_constraintEnd_toStartOf="@id/tvOtherlogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnLogin" />

        <TextView
            android:id="@+id/tvOtherlogin"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_login"
            android:textColor="@color/C0C0C0"
            android:textSize="@dimen/_14sp"
            app:layout_constraintBottom_toBottomOf="@id/line_1"
            app:layout_constraintEnd_toStartOf="@id/line_2"
            app:layout_constraintStart_toEndOf="@id/line_1"
            app:layout_constraintTop_toTopOf="@id/line_1" />

        <View
            android:id="@+id/line_2"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_marginStart="@dimen/_12dp"
            android:background="@color/C0C0C0"
            app:layout_constraintBottom_toBottomOf="@id/line_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvOtherlogin"
            app:layout_constraintTop_toTopOf="@id/line_1" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnGogle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60dp"
            android:layout_marginTop="@dimen/_24dp"
            android:background="@drawable/ripple_red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvOtherlogin"
            app:layout_constraintTop_toBottomOf="@id/line_1">

            <ImageView
                android:layout_width="@dimen/_36dp"
                android:layout_height="@dimen/_36dp"
                android:layout_marginStart="@dimen/_12dp"
                android:src="@drawable/ic_google"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="Google"
                android:textColor="@color/red"
                android:textSize="@dimen/_14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnFacebook"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60dp"
            android:layout_marginTop="@dimen/_12dp"
            android:layout_marginBottom="@dimen/_24dp"
            android:background="@drawable/ripple_blue"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvOtherlogin"
            app:layout_constraintTop_toBottomOf="@id/btnGogle">

            <ImageView
                android:layout_width="@dimen/_36dp"
                android:layout_height="@dimen/_36dp"
                android:layout_marginStart="@dimen/_12dp"
                android:src="@drawable/ic_facebook"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="Facebook"
                android:textColor="@color/blue"
                android:textSize="@dimen/_14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>